ui/bad_range.stderr
error[E0080]: evaluation panicked: range minimum should be less than maximum
 --> src/types.rs
  |
  | / define_bounded_integers! {
  | |     BoundedU8(u8, unaligned, unsigned),
  | |     BoundedU16(u16, unsigned),
  | |     BoundedU32(u32, unsigned),
... |
  | |     BoundedIsize(isize),
  | | }
  | |_^ evaluation of `bounded_integer::types::_::<impl bounded_integer::BoundedUsize<5, 4>>::MIN` failed here
  |
  = note: this error originates in the macro `$crate::__unsafe_api_internal` which comes from the expansion of the macro `define_bounded_integers` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
 --> ui/bad_range.rs:3:13
  |
3 |     let _ = <bounded_integer::BoundedUsize<5, 4>>::MIN;
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: evaluation panicked: range minimum should be less than maximum
 --> ui/bad_range.rs:4:5
  |
4 |     bounded_integer::bounded_integer!(struct X(5, 4););
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `main::__bounded_integer_private_X::_::<impl main::__bounded_integer_private_X::X>::MIN` failed here
  |
  = note: this error originates in the macro `$crate::__unsafe_api_internal` which comes from the expansion of the macro `bounded_integer::bounded_integer` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
 --> ui/bad_range.rs:4:5
  |
4 |     bounded_integer::bounded_integer!(struct X(5, 4););
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this note originates in the macro `$crate::__unsafe_api_internal` which comes from the expansion of the macro `bounded_integer::bounded_integer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: range minimum should be less than maximum
 --> ui/bad_range.rs:4:5
  |
4 |     bounded_integer::bounded_integer!(struct X(5, 4););
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `main::__bounded_integer_private_X::_::<impl main::__bounded_integer_private_X::X>::MAX` failed here
  |
  = note: this error originates in the macro `$crate::__unsafe_api_internal` which comes from the expansion of the macro `bounded_integer::bounded_integer` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
 --> ui/bad_range.rs:4:5
  |
4 |     bounded_integer::bounded_integer!(struct X(5, 4););
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this note originates in the macro `$crate::__unsafe_api_internal` which comes from the expansion of the macro `bounded_integer::bounded_integer` (in Nightly builds, run with -Z macro-backtrace for more info)
